test/speedtest/openspeedtest/httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
spec:
  hostnames:
  - openspeedtest-route.automatic-replace.duckdns.org
  parentRefs:
  - namespace: gateways
    name: main
    sectionName: https-main
  - namespace: gateways
    name: main
    sectionName: http
  rules:
  - backendRefs:
    - kind: Service
      name: openspeedtest
      port: 80
