test/speedtest/openspeedtest/httproute/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: openspeedtest

resources:
- httproute.yaml
- ../../../../ingress/manual-wildcard/domain-info

replacements:
- source:
    kind: ConfigMap
    name: main-domain
    fieldPath: data.subdomain
  targets:
  - select:
      kind: HTTPRoute
      name: openspeedtest
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.hostnames.0
